Fixed Bug 68090 - Menu button is overlapping the container on tap

--- a/ui/apps/themes/components/dropdown.less
+++ b/ui/apps/themes/components/dropdown.less
@@ -312,6 +312,7 @@ ul.dropdown-menu li a.disabled {
                 font-size: 18px;
                 font-weight: inherit;
                 max-width: none !important;
+                border-radius: 4px;
             }
             & > a {
                 color: @link-color;
